tests/org.eclipse.mylyn.docs.intent.parser.test/dataTests/intentDocuments/errors/single_affectation.intent
Document {
	Chapter {
		Section Merge {
			Merging models.
			
			@M
				Resource r {
					URI = "platform:/resource/intent/My.ecore"
				}
			M@
			
		}
	}
}
